--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sejazipper/magento2-api": "file:../zipper-magento-integration",
+    "@sejazipper/magento-integration": "^1.0.1",
     "config": "^3.3.6",
     "lodash": "^4.17.21"
   },
